--- a/biome.json
+++ b/biome.json
@@ -11,7 +11,9 @@
 	},
 	"formatter": {
 		"enabled": true,
-		"indentStyle": "tab"
+		"indentStyle": "tab",
+		"indentWidth": 4,
+		"lineWidth": 60
 	},
 	"organizeImports": {
 		"enabled": true
