--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
 		"lint": "biome lint --write ./src"
 	},
 	"eslintConfig": {
-		"extends": ["react-app", "react-app/jest"]
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
 	},
 	"browserslist": {
-		"production": [">0.2%", "not dead", "not op_mini all"],
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
 		"development": [
 			"last 1 chrome version",
 			"last 1 firefox version",
@@ -38,5 +45,8 @@
 		"sass": "^1.56.1",
 		"typescript": "^4.9.3",
 		"uuid": "^9.0.0"
+	},
+	"devDependencies": {
+		"lefthook": "^1.7.18"
 	}
 }
