chore: update biome, add inc script

--- a/biome.json
+++ b/biome.json
@@ -13,7 +13,8 @@
 		"enabled": true,
 		"indentStyle": "tab",
 		"indentWidth": 4,
-		"lineWidth": 60
+		"lineWidth": 120,
+		"lineEnding": "lf"
 	},
 	"organizeImports": {
 		"enabled": true
