--- a/package.json
+++ b/package.json
@@ -9,20 +9,14 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"format": "biome format --write ./src",
-		"lint": "biome lint --write ./src"
+		"lint": "biome lint --write ./src",
+		"inc": "npm --no-git-tag-version version --type && npm version"
 	},
 	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
+		"extends": ["react-app", "react-app/jest"]
 	},
 	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
+		"production": [">0.2%", "not dead", "not op_mini all"],
 		"development": [
 			"last 1 chrome version",
 			"last 1 firefox version",
