--- a/package.json
+++ b/package.json
@@ -2,45 +2,32 @@
 	"name": "portfolio-client",
 	"version": "0.1.0",
 	"private": true,
+	"type": "module",
 	"scripts": {
-		"dev": "npm start",
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
+		"compile": "tsc",
+		"dev": "vite",
+		"start": "vite",
+		"build": "tsc -b && vite build",
+		"preview": "vite preview",
 		"format": "biome format --write ./src",
 		"lint": "biome lint --write ./src",
 		"inc": "npm --no-git-tag-version version --type && npm version"
 	},
-	"eslintConfig": {
-		"extends": ["react-app", "react-app/jest"]
-	},
-	"browserslist": {
-		"production": [">0.2%", "not dead", "not op_mini all"],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
 	"dependencies": {
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0",
-		"@types/jest": "^27.5.2",
-		"@types/node": "^16.18.3",
+		"@types/node": "^22.13.10",
 		"@types/react": "^18.0.25",
 		"@types/react-dom": "^18.0.9",
 		"@types/uuid": "^9.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.4.3",
-		"react-scripts": "5.0.1",
 		"sass": "^1.56.1",
-		"typescript": "^4.9.3",
+		"typescript": "^5.7.2",
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
-		"lefthook": "^1.7.18"
+		"@vitejs/plugin-react": "^4.3.4",
+		"lefthook": "^1.7.18",
+		"vite": "^6.2.1"
 	}
 }
